# simtune

./: .bandit  .env.example  .gitignore  Makefile  README.md  SPECS.md  STAGE1B_IMPLEMENTATION_PLAN.md  STAGE2_IMPLEMENTATION_PLAN.md  TESTING.md  USERGUIDE.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.claude/: settings.local.json
.github/workflows/: test.yml
cli/: main.py
cli/commands/: author.py  dataset.py  generate.py  train.py
core/: config.py  markdown_utils.py  models.py  storage.py
core/adapters/: openai_adapter.py
core/dataset/: builder.py  validator.py
core/prompts/: templates.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_text_for_import.txt
tests/fixtures/api_responses/: openai_file_upload.json  openai_finetune_job_created.json  openai_finetune_job_succeeded.json
tests/fixtures/author_profiles/: casual_blogger.json  tech_writer.json
tests/integration/: __init__.py  test_cli_workflows.py
tests/unit/: test_config.py  test_models.py  test_storage.py
tests/unit/cli/commands/: __init__.py  test_generate.py
tests/unit/core/: test_dataset_builder.py  test_markdown_utils.py  test_storage.py
tests/unit/core/adapters/: test_openai_adapter.py
